--- a/index.html
+++ b/index.html
@@ -228,12 +228,13 @@
   </g>
   
 </g>
-        <rect id="js-slice-line" transform="scale(0)" height="2" width="400" x="340" y="450" fill="white"></rect>
+        <rect id="js-slice-line" transform="scale(0) rotate(45)" opacity="0" height="2" width="400" x="340" y="450" fill="white"></rect>
       </mask>
       <rect fill="url(#owls-pattern)" mask="url(#dust-mask)" width="1280" height="800"></rect>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
+    <script src="js/spriter.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
