--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
     <svg viewBox="0 0 1280 900">
       <rect id="js-flowers-cream" fill="url(#flowers-cream-pattern)" width="300" height="300" x="490" y="-600" class="rect"></rect>
+      <g id="js-cream-triangles" class="h-g">
+        <path id="js-cream-triangle1" d="M0,0 L0,300 L300,0 L0,0 Z" fill="url(#flowers-cream-pattern)"></path>
+        <g id="js-cream-triangle2-wrapper">
+          <path id="js-cream-triangle2" d="M0,300 L300,300 L300,0 L0,300 Z" fill="url(#flowers-cream-pattern)"></path>
+        </g>
+      </g>
       <mask id="dust-mask"><g id="js-dust" class="dust" transform="translate(230,516)">
   <g>
     <path d="M94.173,4.679c7.001-4.074,17.417-3.405,22.103,3.827c3.398,1.313,6.445,3.421,8.8,6.214
