working on kaleidoscope smoke

--- a/index.html
+++ b/index.html
@@ -92,6 +92,28 @@
       <mask id="caleydoscope-mask">
         <circle id="js-c-mask1" r="100" fill="white" stroke="none" stroke-width="0" transform="translate(640,450)"></circle>
         <circle id="js-c-mask2" r="25" fill="black" stroke="none" stroke-width="0" transform="translate(640,450)" opacity="0"></circle>
+        <g id="js-c-blow" transform="translate(640,450)">
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+          <circle r="25" fill="white"></circle>
+        </g>
       </mask>
       <g id="js-caleydoscope" stroke="none" stroke-width="0" fill="none" fill-rule="evenodd" mask="url(#caleydoscope-mask)" class="caleydoscope">
         <g transform="translate(422,231)">
