--- a/index.html
+++ b/index.html
@@ -93,26 +93,26 @@
         <circle id="js-c-mask1" r="100" fill="white" stroke="none" stroke-width="0" transform="translate(640,450)"></circle>
         <circle id="js-c-mask2" r="25" fill="black" stroke="none" stroke-width="0" transform="translate(640,450)" opacity="0"></circle>
         <g id="js-c-blow" transform="translate(640,450)">
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
-          <circle r="25" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
         </g>
       </mask>
       <g id="js-caleydoscope" stroke="none" stroke-width="0" fill="none" fill-rule="evenodd" mask="url(#caleydoscope-mask)" class="caleydoscope">
@@ -156,6 +156,7 @@
           </g>
         </g>
       </g>
+      <text transform="translate(640,460)" fill="url(#wood-pattern)" style="font-size: 40px; font-family: muro" text-anchor="middle">VELOCITYJS</text>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
