--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         xlink:href="css/i/owls.jpg"></image>
     </pattern>
 
+
+    <pattern id="owls-pattern2" width="150" height="150" patternUnits="userSpaceOnUse" y="200">
+      <image id="js-owls-image2"
+        x="-75" y="-75"
+        width="300"
+        height="300"
+        xlink:href="css/i/caleydoscope3.jpg"></image>
+    </pattern>
+
+
     <pattern id="cheese-pattern" width="400" height="300" patternUnits="userSpaceOnUse" y="200">
       <image id="js-cheese-image"
         width="400"
@@ -84,6 +94,14 @@
         xlink:href="css/i/wood.jpg"></image>
     </pattern>
 
+    <filter id="f_multiply" filterUnits="objectBoundingBox" x="0%" y="0%" width="100%" height="100%">
+      <feFlood x="0" y="0" width="96" height="32" flood-color="#EA312F" result="a"/>
+      <feFlood x="0" y="50" width="96" height="32" flood-color="#EA312F" result="b"/>
+      <feFlood  x="0" y="50" width="32" height="96" flood-opacity="0.8" flood-color="#3A5BA6" result="c"/>
+      <feBlend in="a" in2="b" result="ab" mode="multiply"/>
+      <feBlend in="ab" in2="c" mode="multiply"/>
+     </filter>
+
 
   </defs>
 </svg>
@@ -93,6 +111,36 @@
         <circle id="js-c-mask1" r="100" fill="white" stroke="none" stroke-width="0" transform="translate(640,450)"></circle>
         <circle id="js-c-mask2" r="25" fill="black" stroke="none" stroke-width="0" transform="translate(640,450)" opacity="0"></circle>
         <g id="js-c-blow" transform="translate(640,450)">
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
+          <circle r="0" fill="white"></circle>
           <circle r="0" fill="white"></circle>
           <circle r="0" fill="white"></circle>
           <circle r="0" fill="white"></circle>
@@ -156,7 +204,18 @@
           </g>
         </g>
       </g>
-      <text transform="translate(640,460)" fill="url(#wood-pattern)" style="font-size: 40px; font-family: muro" text-anchor="middle">VELOCITYJS</text>
+      <g id="js-velocity-text" stroke="#222" stroke-width="2" transform="translate(480,425)" fill="url(#owls-pattern2)" style="font-size: 64px; font-family: muro" fill-rule="evenodd" class="velocity-text">
+        <path id="Path" d="M48.9772289,10.2965042 L59.92,10.2965042 L59.92,1.536 L38.92,1.536 L38.92,46.536 L59.92,46.536 L59.92,37.7754958 L48.9772289,37.7754958 L48.9772289,27.943563 L56.7573494,27.943563 L56.7573494,19.1830588 L48.9772289,19.1830588 L48.9772289,10.2965042 Z"></path>
+        <path id="Path" d="M75.7957764,1.536 L65.92,1.536 L65.92,46.536 L85.92,46.536 L85.92,37.7754958 L75.7957764,37.7754958 L75.7957764,1.536 Z"></path>
+        <path id="Path" d="M106.92,0.536 C92.958961,0.536 91.92,7.54142005 91.92,24.0996856 C91.92,41.231122 92.958961,47.536 106.92,47.536 C120.881039,47.536 121.92,41.231122 121.92,24.0996856 C121.92,7.54142005 120.881039,0.536 106.92,0.536 Z M107.42,9.536 C110.545,9.536 110.92,11.8686087 110.92,24.0990435 C110.92,36.5816522 110.545,38.536 107.42,38.536 C104.295,38.536 103.92,36.5816522 103.92,24.0990435 C103.92,11.8686087 104.295,9.536 107.42,9.536 Z"></path>
+        <path id="Path" d="M142.546087,38.6836965 C139.393913,38.6836965 138.952609,36.7094417 138.952609,24.0996856 C138.952609,11.7446721 139.456957,9.38830352 142.60913,9.38830352 C145.383043,9.38830352 145.950435,12.2541572 145.950435,16.3300379 L156.92,16.3300379 C156.92,6.96824932 152.948261,0.536 143.113478,0.536 C130.063478,0.536 127.92,6.90456369 127.92,24.0996856 C127.92,41.8679783 129.811304,47.536 143.113478,47.536 C152.948261,47.536 156.92,41.1037507 156.92,31.7419621 L145.950435,31.7419621 C145.950435,35.9452141 145.32,38.6836965 142.546087,38.6836965 L142.546087,38.6836965 Z"></path>
+        <path id="Path" d="M162.92,1.536 L162.92,46.536 L172.92,46.536 L172.92,1.536 L162.92,1.536 Z"></path>
+        <path id="Path" d="M197.922247,10.2965042 L206.92,10.2965042 L206.92,1.536 L178.92,1.536 L178.92,10.2965042 L187.917753,10.2965042 L187.917753,46.536 L197.922247,46.536 L197.922247,10.2965042 Z"></path>
+        <path id="Path" d="M233.95937,46.536 L233.95937,26.430958 L244.92,1.536 L234.337323,1.536 L228.92,16.9141513 L223.502677,1.536 L212.92,1.536 L223.88063,26.430958 L223.88063,46.536 L233.95937,46.536 Z"></path>
+        <path id="Path" d="M250.92,31.2522534 C250.92,42.5304904 253.45125,47.536 265.26375,47.536 C277.011346,47.536 277.92,42.3404077 277.92,24.2191956 L277.92,1.536 L267.600288,1.536 L267.600288,24.2191956 C267.600288,37.7784242 266.756538,38.7288375 265.26375,38.7288375 C263.251731,38.7288375 262.278173,37.6517025 262.278173,31.2522534 L250.92,31.2522534 Z"></path>
+        <path id="Path" d="M297.10932,9.38830352 C298.68699,9.38830352 298.939417,10.7893875 298.939417,16.3300379 L309.92,16.3300379 C309.92,6.96824932 306.57534,0.536 297.361748,0.536 C287.138447,0.536 284.487961,4.22976694 284.487961,13.5915556 C284.487961,27.2202818 298.623883,26.137626 298.623883,34.5441301 C298.623883,37.0915556 298.371456,38.6836965 296.856893,38.6836965 C294.900583,38.6836965 294.900583,35.3083577 294.900583,31.232477 L283.92,31.232477 C283.92,40.5942656 286.002524,47.536 296.856893,47.536 C308.468544,47.536 309.604466,42.2500921 309.604466,34.6078157 C309.604466,21.3612033 295.216117,21.8706883 295.216117,13.8462981 C295.216117,10.2162168 295.720971,9.38830352 297.10932,9.38830352 L297.10932,9.38830352 Z"></path>
+        <path id="Path" d="M22.0823246,1.536 L16.8879359,31.7250756 L11.7576754,1.536 L0.92,1.536 L11.8218036,46.536 L22.0181964,46.536 L32.92,1.536 L22.0823246,1.536 Z"></path>
+      </g>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
