--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
 
     <svg viewBox="0 0 1280 900">
       <mask id="caleydoscope-mask">
-        <circle id="js-c-mask1" r="100" fill="white" stroke="none" stroke-width="0" transform="translate(640,450)"></circle>
-        <circle id="js-c-mask2" r="25" fill="black" stroke="none" stroke-width="0" transform="translate(640,450)" opacity="0"></circle>
-        <g id="js-c-blow" transform="translate(640,450)">
+        <circle id="js-c-mask1" r="150" fill="white" stroke="none" stroke-width="0" transform="translate(640,450)"></circle>
+        <g id="js-c-blow" transform="translate(640,450)" opacity="0">
           <circle r="0" fill="white"></circle>
           <circle r="0" fill="white"></circle>
           <circle r="0" fill="white"></circle>
