--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
     <script src="js/helpers.js"></script>
     <script src="js/spriter.js"></script>
+    <script src="js/waves.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
