add triangles file

--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
     <script src="js/spriter.js"></script>
     <script src="js/waves.js"></script>
     <script src="js/caleydoscope.js"></script>
+    <script src="js/triangles.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
