--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         xlink:href="css/i/wood.jpg"></image>
     </pattern>
 
-    <pattern id="space-dogs-pattern" width="400" height="300" patternUnits="userSpaceOnUse" y="200">
+    <pattern id="space-dogs-pattern" width="200" height="150" patternUnits="userSpaceOnUse" y="200">
       <image id="js-space-dogs-image"
         width="400"
         height="300"
@@ -145,8 +145,30 @@
           <path d="M679.6521971041294,358.19747680583464 L689.5652463801617,335.24684600729324" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
         </g>
       </mask>
-      <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
+      <g id="js-meets-cicles">
+        <circle fill="white" stroke="none" r="95" transform="translate(502,235)"></circle>
+        <circle fill="white" stroke="none" r="52" transform="translate(623,278)"></circle>
+        <circle fill="white" stroke="none" r="67" transform="translate(580,205)"></circle>
+        <circle fill="white" stroke="none" r="87" transform="translate(588,268)"></circle>
+        <circle fill="white" stroke="none" r="59" transform="translate(657,267)"></circle>
+        <circle fill="white" stroke="none" r="81" transform="translate(656,260)"></circle>
+        <circle fill="white" stroke="none" r="70" transform="translate(546,223)"></circle>
+        <circle fill="white" stroke="none" r="85" transform="translate(508,224)"></circle>
+        <circle fill="white" stroke="none" r="66" transform="translate(588,263)"></circle>
+        <circle fill="white" stroke="none" r="53" transform="translate(691,213)"></circle>
+        <circle fill="white" stroke="none" r="79" transform="translate(655,222)"></circle>
+        <circle fill="white" stroke="none" r="61" transform="translate(723,256)"></circle>
+        <circle fill="white" stroke="none" r="87" transform="translate(545,266)"></circle>
+        <circle fill="white" stroke="none" r="86" transform="translate(636,249)"></circle>
+        <circle fill="white" stroke="none" r="98" transform="translate(739,208)"></circle>
+        <circle fill="white" stroke="none" r="81" transform="translate(723,251)"></circle>
+        <circle fill="white" stroke="none" r="90" transform="translate(715,230)"></circle>
+        <circle fill="white" stroke="none" r="58" transform="translate(517,248)"></circle>
+        <circle fill="white" stroke="none" r="85" transform="translate(507,205)"></circle>
+        <circle fill="white" stroke="none" r="99" transform="translate(656,236)"></circle>
+      </g>
+      <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
         <mask id="meets-mask">
           <g id="MEETS" transform="translate(510, 200)" fill="white">
@@ -164,10 +186,10 @@
                 <path id="Oval-46" d="M22.520939,106 C28.741821,118.235456 41.6220369,126.689487 64,127 C96.7298602,126.652008 123,100.538567 123,68 C123,36.1134415 96.7298602,10 64,10 C63.5508363,9.97882902 63.0985319,9.9790176 62.6434551,10 L62.6434551,10 L17,10 C9.82029825,10 4,15.8202983 4,23 C4,28.404523 7.29797354,33.0387629 11.9912007,35 C7.29797354,36.9612371 4,41.595477 4,47 C4,51.9881625 6.80940026,56.3201544 10.9322251,58.5 C6.80940026,60.6798456 4,65.0118375 4,70 C4,74.9881625 6.80940026,79.3201544 10.9322251,81.5 C6.80940026,83.6798456 4,88.0118375 4,93 C4,100.179702 9.82029825,106 17,106 L22.520939,106 Z M10.1113281,35.4038086 L22.9257812,35.4038086 M10.1113281,58.4038086 L22.9257812,58.4038086 M10.1113281,81.4038086 L22.9257812,81.4038086 M23,106 L65,106" stroke="#1F2947" stroke-width="5" fill="#FBF7E8"></path>
               </g>
             </g>
-            <rect id="Rectangle-33" fill-opacity="0.1" fill="#000000" x="139" y="25" width="27" height="80" rx="5"></rect>
-            <rect id="Rectangle-32" fill="#FFFFFF" x="143" y="20" width="27" height="80" rx="5"></rect>
+            <rect fill-opacity="0.1" fill="#000000" x="139" y="25" width="27" height="80" rx="5" class="js-sleeve"></rect>
+            <rect fill="#FFFFFF" x="143" y="20" width="27" height="80" rx="5" class="js-sleeve"></rect>
             <mask id="right-shirt">
-              <rect id="js-right-shirt" transform="translate(500,0)" fill="white" rx="5" x="770" y="288" width="282" height="97"></rect>
+              <rect id="js-right-shirt" transform="translate(500,0)" fill="white" rx="5" x="770" y="288" width="282" height="97" class="js-shirt"></rect>
             </mask>
             <rect id="fist-mask" transform="translate(100,42.5)" fill="#FBF7E8" width="35" height="39"></rect>
           </g>
@@ -176,7 +198,7 @@
         <g id="gradient-group" transform="translate(600,300)">
           <rect id="white-rect" fill="#FFFFFF" x="440" y="-100" width="300" height="300"></rect>
           <rect id="gradient" fill="url(#linearGradient-1)" x="264" y="-100" width="177" height="300"></rect>
-          <circle id="button" fill="#FFFFFF" cx="205" cy="67" r="7.5"></circle>
+          <circle id="js-right-button" fill="#FFFFFF" cx="205" cy="67" r="7.5" class="h-g"></circle>
         </g>
         <g id="left-hand" transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)">
           <g id="js-left-hand" class="h-g">
@@ -188,14 +210,19 @@
                 <path id="Oval-46" d="M22.520939,103 C28.741821,115.235456 41.6220369,123.689487 64,124 C96.7298602,123.652008 123,97.5385667 123,65 C123,33.1134415 96.7298602,7 64,7 C63.5508363,6.97882902 63.0985319,6.9790176 62.6434551,7 L62.6434551,7 L17,7 C9.82029825,7 4,12.8202983 4,20 C4,25.404523 7.29797354,30.0387629 11.9912007,32 C7.29797354,33.9612371 4,38.595477 4,44 C4,48.9881625 6.80940026,53.3201544 10.9322251,55.5 C6.80940026,57.6798456 4,62.0118375 4,67 C4,71.9881625 6.80940026,76.3201544 10.9322251,78.5 C6.80940026,80.6798456 4,85.0118375 4,90 C4,97.1797017 9.82029825,103 17,103 L22.520939,103 Z M10.1113281,32.4038086 L22.9257812,32.4038086 M10.1113281,55.4038086 L22.9257812,55.4038086 M10.1113281,78.4038086 L22.9257812,78.4038086 M23,103 L65,103" stroke="#1F2947" stroke-width="5" fill="#FBF7E8"></path>
               </g>
             </g>
-            <rect id="Rectangle-33" fill-opacity="0.1" fill="#000000" x="139" y="13" width="27" height="80" rx="5"></rect>
-            <rect id="Rectangle-32" fill="#FFFFFF" x="143" y="17" width="27" height="80" rx="5"></rect>
-            <rect id="shirt" rx="5" fill="url(#rose-pattern)" x="158" y="9" width="282" height="97"></rect>
-            <circle id="button" fill="#9A0009" cx="189.5" cy="87.5" r="7.5"></circle>
+            <rect fill-opacity="0.1" fill="#000000" x="139" y="13" width="27" height="80" rx="5" class="js-sleeve"></rect>
+            <rect fill="#FFFFFF" x="143" y="17" width="27" height="80" rx="5" class="js-sleeve"></rect>
             <rect id="fist-mask" transform="translate(100,40)" fill="#FBF7E8" width="35" height="38.5"></rect>
           </g>
+          <mask id="left-shirt">
+            <rect id="js-left-shirt" transform="translate(-500,0)" rx="5" fill="white" x="183" y="280" width="282" height="97" class="js-shirt"></rect>
+          </mask>
+        </g>
+        <rect width="1280" height="900" mask="url(#left-shirt)" fill="url(#rose-pattern)"></rect>
+        <g id="gradient-group-left" transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)">
           <rect id="white-gradient" fill="url(#linearGradient-1)" x="264" y="-100" width="177" height="300"></rect>
           <rect id="white-rect" fill="#FFFFFF" x="441" y="-100" width="300" height="300"></rect>
+          <circle id="js-left-button" fill="#9A0009" cx="189.5" cy="87.5" r="7.5" class="h-g"></circle>
         </g>
       </g>
     </svg>
