--- a/index.html
+++ b/index.html
@@ -145,35 +145,14 @@
           <path d="M679.6521971041294,358.19747680583464 L689.5652463801617,335.24684600729324" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
         </g>
       </mask>
-      <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
-      <g id="js-meets-cicles">
-        <circle fill="white" stroke="none" r="95" transform="translate(502,235)"></circle>
-        <circle fill="white" stroke="none" r="52" transform="translate(623,278)"></circle>
-        <circle fill="white" stroke="none" r="67" transform="translate(580,205)"></circle>
-        <circle fill="white" stroke="none" r="87" transform="translate(588,268)"></circle>
-        <circle fill="white" stroke="none" r="59" transform="translate(657,267)"></circle>
-        <circle fill="white" stroke="none" r="81" transform="translate(656,260)"></circle>
-        <circle fill="white" stroke="none" r="70" transform="translate(546,223)"></circle>
-        <circle fill="white" stroke="none" r="85" transform="translate(508,224)"></circle>
-        <circle fill="white" stroke="none" r="66" transform="translate(588,263)"></circle>
-        <circle fill="white" stroke="none" r="53" transform="translate(691,213)"></circle>
-        <circle fill="white" stroke="none" r="79" transform="translate(655,222)"></circle>
-        <circle fill="white" stroke="none" r="61" transform="translate(723,256)"></circle>
-        <circle fill="white" stroke="none" r="87" transform="translate(545,266)"></circle>
-        <circle fill="white" stroke="none" r="86" transform="translate(636,249)"></circle>
-        <circle fill="white" stroke="none" r="98" transform="translate(739,208)"></circle>
-        <circle fill="white" stroke="none" r="81" transform="translate(723,251)"></circle>
-        <circle fill="white" stroke="none" r="90" transform="translate(715,230)"></circle>
-        <circle fill="white" stroke="none" r="58" transform="translate(517,248)"></circle>
-        <circle fill="white" stroke="none" r="85" transform="translate(507,205)"></circle>
-        <circle fill="white" stroke="none" r="99" transform="translate(656,236)"></circle>
-      </g>
       <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
         <mask id="meets-mask">
-          <g id="MEETS" transform="translate(510, 200)" fill="white">
-            <path id="Mask" d="M47.28,91 L66.36,91 L66.36,5.32 L46.08,5.32 L35.04,50.2 L23.88,5.32 L3.6,5.32 L3.6,91 L22.68,91 L22.68,52.36 L29.16,91 L41.04,91 L47.28,52.36 L47.28,91 Z M92.64,22 L113.4,22 L113.4,5.32 L73.56,5.32 L73.56,91 L113.4,91 L113.4,74.32 L92.64,74.32 L92.64,55.6 L107.4,55.6 L107.4,38.92 L92.64,38.92 L92.64,22 Z M139.68,22 L160.44,22 L160.44,5.32 L120.6,5.32 L120.6,91 L160.44,91 L160.44,74.32 L139.68,74.32 L139.68,55.6 L154.44,55.6 L154.44,38.92 L139.68,38.92 L139.68,22 Z M203.88,22 L221.04,22 L221.04,5.32 L167.64,5.32 L167.64,22 L184.8,22 L184.8,91 L203.88,91 L203.88,22 Z M253.32,20.56 C256.32,20.56 256.8,23.2 256.8,33.64 L277.68,33.64 C277.68,16 271.32,3.88 253.8,3.88 C234.36,3.88 229.32,10.84 229.32,28.48 C229.32,54.16 256.2,52.12 256.2,67.96 C256.2,72.76 255.72,75.76 252.84,75.76 C249.12,75.76 249.12,69.4 249.12,61.72 L228.24,61.72 C228.24,79.36 232.2,92.44 252.84,92.44 C274.92,92.44 277.08,82.48 277.08,68.08 C277.08,43.12 249.72,44.08 249.72,28.96 C249.72,22.12 250.68,20.56 253.32,20.56 L253.32,20.56 Z" fill-opacity="0.1"></path>
-            <path id="Mask" d="M43.28,87 L62.36,87 L62.36,1.32 L42.08,1.32 L31.04,46.2 L19.88,1.32 L-0.4,1.32 L-0.4,87 L18.68,87 L18.68,48.36 L25.16,87 L37.04,87 L43.28,48.36 L43.28,87 Z M88.64,18 L109.4,18 L109.4,1.32 L69.56,1.32 L69.56,87 L109.4,87 L109.4,70.32 L88.64,70.32 L88.64,51.6 L103.4,51.6 L103.4,34.92 L88.64,34.92 L88.64,18 Z M135.68,18 L156.44,18 L156.44,1.32 L116.6,1.32 L116.6,87 L156.44,87 L156.44,70.32 L135.68,70.32 L135.68,51.6 L150.44,51.6 L150.44,34.92 L135.68,34.92 L135.68,18 Z M199.88,18 L217.04,18 L217.04,1.32 L163.64,1.32 L163.64,18 L180.8,18 L180.8,87 L199.88,87 L199.88,18 Z M249.32,16.56 C252.32,16.56 252.8,19.2 252.8,29.64 L273.68,29.64 C273.68,12 267.32,-0.12 249.8,-0.12 C230.36,-0.12 225.32,6.84 225.32,24.48 C225.32,50.16 252.2,48.12 252.2,63.96 C252.2,68.76 251.72,71.76 248.84,71.76 C245.12,71.76 245.12,65.4 245.12,57.72 L224.24,57.72 C224.24,75.36 228.2,88.44 248.84,88.44 C270.92,88.44 273.08,78.48 273.08,64.08 C273.08,39.12 245.72,40.08 245.72,24.96 C245.72,18.12 246.68,16.56 249.32,16.56 L249.32,16.56 Z"></path>
+          <g transform="translate(510, 200)" fill="white">
+            <g transform="scale(50) translate(-1280,-200)" id="js-meets">
+              <path id="Mask" d="M47.28,91 L66.36,91 L66.36,5.32 L46.08,5.32 L35.04,50.2 L23.88,5.32 L3.6,5.32 L3.6,91 L22.68,91 L22.68,52.36 L29.16,91 L41.04,91 L47.28,52.36 L47.28,91 Z M92.64,22 L113.4,22 L113.4,5.32 L73.56,5.32 L73.56,91 L113.4,91 L113.4,74.32 L92.64,74.32 L92.64,55.6 L107.4,55.6 L107.4,38.92 L92.64,38.92 L92.64,22 Z M139.68,22 L160.44,22 L160.44,5.32 L120.6,5.32 L120.6,91 L160.44,91 L160.44,74.32 L139.68,74.32 L139.68,55.6 L154.44,55.6 L154.44,38.92 L139.68,38.92 L139.68,22 Z M203.88,22 L221.04,22 L221.04,5.32 L167.64,5.32 L167.64,22 L184.8,22 L184.8,91 L203.88,91 L203.88,22 Z M253.32,20.56 C256.32,20.56 256.8,23.2 256.8,33.64 L277.68,33.64 C277.68,16 271.32,3.88 253.8,3.88 C234.36,3.88 229.32,10.84 229.32,28.48 C229.32,54.16 256.2,52.12 256.2,67.96 C256.2,72.76 255.72,75.76 252.84,75.76 C249.12,75.76 249.12,69.4 249.12,61.72 L228.24,61.72 C228.24,79.36 232.2,92.44 252.84,92.44 C274.92,92.44 277.08,82.48 277.08,68.08 C277.08,43.12 249.72,44.08 249.72,28.96 C249.72,22.12 250.68,20.56 253.32,20.56 L253.32,20.56 Z" fill-opacity="0.1"></path>
+              <path id="Mask" d="M43.28,87 L62.36,87 L62.36,1.32 L42.08,1.32 L31.04,46.2 L19.88,1.32 L-0.4,1.32 L-0.4,87 L18.68,87 L18.68,48.36 L25.16,87 L37.04,87 L43.28,48.36 L43.28,87 Z M88.64,18 L109.4,18 L109.4,1.32 L69.56,1.32 L69.56,87 L109.4,87 L109.4,70.32 L88.64,70.32 L88.64,51.6 L103.4,51.6 L103.4,34.92 L88.64,34.92 L88.64,18 Z M135.68,18 L156.44,18 L156.44,1.32 L116.6,1.32 L116.6,87 L156.44,87 L156.44,70.32 L135.68,70.32 L135.68,51.6 L150.44,51.6 L150.44,34.92 L135.68,34.92 L135.68,18 Z M199.88,18 L217.04,18 L217.04,1.32 L163.64,1.32 L163.64,18 L180.8,18 L180.8,87 L199.88,87 L199.88,18 Z M249.32,16.56 C252.32,16.56 252.8,19.2 252.8,29.64 L273.68,29.64 C273.68,12 267.32,-0.12 249.8,-0.12 C230.36,-0.12 225.32,6.84 225.32,24.48 C225.32,50.16 252.2,48.12 252.2,63.96 C252.2,68.76 251.72,71.76 248.84,71.76 C245.12,71.76 245.12,65.4 245.12,57.72 L224.24,57.72 C224.24,75.36 228.2,88.44 248.84,88.44 C270.92,88.44 273.08,78.48 273.08,64.08 C273.08,39.12 245.72,40.08 245.72,24.96 C245.72,18.12 246.68,16.56 249.32,16.56 L249.32,16.56 Z"></path>
+            </g>
           </g>
         </mask>
         <g id="right-hand" transform="translate(614.000000, 271.000000)">
@@ -225,6 +204,7 @@
           <circle id="js-left-button" fill="#9A0009" cx="189.5" cy="87.5" r="7.5" class="h-g"></circle>
         </g>
       </g>
+      <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
