--- a/index.html
+++ b/index.html
@@ -147,18 +147,18 @@
       </mask>
       <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
       <g id="js-meets-circles">
-        <circle fill="white" stroke="none" r="51" transform="translate(754,239)" data-x="754" data-y="239"></circle>
-        <circle fill="white" stroke="none" r="58" transform="translate(511,285)" data-x="511" data-y="285"></circle>
-        <circle fill="white" stroke="none" r="56" transform="translate(518,229)" data-x="518" data-y="229"></circle>
-        <circle fill="white" stroke="none" r="100" transform="translate(629,243)" data-x="629" data-y="243"></circle>
-        <circle fill="white" stroke="none" r="93" transform="translate(659,250)" data-x="659" data-y="250"></circle>
-        <circle fill="white" stroke="none" r="87" transform="translate(526,292)" data-x="526" data-y="292"></circle>
-        <circle fill="white" stroke="none" r="74" transform="translate(772,251)" data-x="772" data-y="251"></circle>
-        <circle fill="white" stroke="none" r="70" transform="translate(578,235)" data-x="578" data-y="235"></circle>
-        <circle fill="white" stroke="none" r="82" transform="translate(604,262)" data-x="604" data-y="262"></circle>
-        <circle fill="white" stroke="none" r="77" transform="translate(589,275)" data-x="589" data-y="275"></circle>
-        <circle fill="white" stroke="none" r="64" transform="translate(735,297)" data-x="735" data-y="297"></circle>
-        <circle fill="white" stroke="none" r="67" transform="translate(729,261)" data-x="729" data-y="261"></circle>
+        <circle fill="white" stroke="none" r="100" transform="translate(721,219)" data-x="721" data-y="219"></circle>
+        <circle fill="white" stroke="none" r="85" transform="translate(618,232)" data-x="618" data-y="232"></circle>
+        <circle fill="white" stroke="none" r="51" transform="translate(582,296)" data-x="582" data-y="296"></circle>
+        <circle fill="white" stroke="none" r="65" transform="translate(574,297)" data-x="574" data-y="297"></circle>
+        <circle fill="white" stroke="none" r="87" transform="translate(560,250)" data-x="560" data-y="250"></circle>
+        <circle fill="white" stroke="none" r="60" transform="translate(599,201)" data-x="599" data-y="201"></circle>
+        <circle fill="white" stroke="none" r="54" transform="translate(755,279)" data-x="755" data-y="279"></circle>
+        <circle fill="white" stroke="none" r="76" transform="translate(634,269)" data-x="634" data-y="269"></circle>
+        <circle fill="white" stroke="none" r="64" transform="translate(599,228)" data-x="599" data-y="228"></circle>
+        <circle fill="white" stroke="none" r="80" transform="translate(591,207)" data-x="591" data-y="207"></circle>
+        <circle fill="white" stroke="none" r="99" transform="translate(597,253)" data-x="597" data-y="253"></circle>
+        <circle fill="white" stroke="none" r="94" transform="translate(616,275)" data-x="616" data-y="275"></circle>
       </g>
       <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -566,6 +566,7 @@
     <script src="js/waves.js"></script>
     <script src="js/caleydoscope.js"></script>
     <script src="js/triangles.js"></script>
+    <script src="js/svg.js"></script>
     <script src="js/meets.js"></script>
     <script src="js/main.js"></script>
   </body>
