--- a/index.html
+++ b/index.html
@@ -147,18 +147,19 @@
       </mask>
       <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
       <g id="js-meets-circles">
-        <circle fill="white" stroke="none" r="100" transform="translate(721,219)" data-x="721" data-y="219"></circle>
-        <circle fill="white" stroke="none" r="85" transform="translate(618,232)" data-x="618" data-y="232"></circle>
-        <circle fill="white" stroke="none" r="51" transform="translate(582,296)" data-x="582" data-y="296"></circle>
-        <circle fill="white" stroke="none" r="65" transform="translate(574,297)" data-x="574" data-y="297"></circle>
-        <circle fill="white" stroke="none" r="87" transform="translate(560,250)" data-x="560" data-y="250"></circle>
-        <circle fill="white" stroke="none" r="60" transform="translate(599,201)" data-x="599" data-y="201"></circle>
-        <circle fill="white" stroke="none" r="54" transform="translate(755,279)" data-x="755" data-y="279"></circle>
-        <circle fill="white" stroke="none" r="76" transform="translate(634,269)" data-x="634" data-y="269"></circle>
-        <circle fill="white" stroke="none" r="64" transform="translate(599,228)" data-x="599" data-y="228"></circle>
-        <circle fill="white" stroke="none" r="80" transform="translate(591,207)" data-x="591" data-y="207"></circle>
-        <circle fill="white" stroke="none" r="99" transform="translate(597,253)" data-x="597" data-y="253"></circle>
-        <circle fill="white" stroke="none" r="94" transform="translate(616,275)" data-x="616" data-y="275"></circle>
+        <circle fill="white" stroke="none" r="77" transform="translate(546,273)" data-x="546" data-y="273"></circle>
+        <circle fill="white" stroke="none" r="96" transform="translate(611,236)" data-x="611" data-y="236"></circle>
+        <circle fill="white" stroke="none" r="69" transform="translate(773,232)" data-x="773" data-y="232"></circle>
+        <circle fill="white" stroke="none" r="61" transform="translate(771,237)" data-x="771" data-y="237"></circle>
+        <circle fill="white" stroke="none" r="58" transform="translate(641,251)" data-x="641" data-y="251"></circle>
+        <circle fill="white" stroke="none" r="76" transform="translate(658,300)" data-x="658" data-y="300"></circle>
+        <circle fill="white" stroke="none" r="88" transform="translate(633,215)" data-x="633" data-y="215"></circle>
+        <circle fill="white" stroke="none" r="86" transform="translate(762,219)" data-x="762" data-y="219"></circle>
+        <circle fill="white" stroke="none" r="91" transform="translate(692,216)" data-x="692" data-y="216"></circle>
+        <circle fill="white" stroke="none" r="74" transform="translate(705,242)" data-x="705" data-y="242"></circle>
+        <circle fill="white" stroke="none" r="88" transform="translate(515,281)" data-x="515" data-y="281"></circle>
+        <circle fill="white" stroke="none" r="58" transform="translate(536,207)" data-x="536" data-y="207"></circle>
+        <circle fill="white" stroke="none" r="83" transform="translate(565,256)" data-x="565" data-y="256"></circle>
       </g>
       <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -558,6 +559,38 @@
   <path id="js-wave1-top2" fill="white" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
   <path id="js-wave1-top" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
 </g>
+      <g id="js-svg-circles" class="h-g">
+        <circle fill="white" stroke="" r="0" transform="translate(870,146)" data-x="870" data-y="146"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(626,293)" data-x="626" data-y="293"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(881,241)" data-x="881" data-y="241"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(563,522)" data-x="563" data-y="522"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(647,279)" data-x="647" data-y="279"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(976,346)" data-x="976" data-y="346"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(583,509)" data-x="583" data-y="509"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(306,193)" data-x="306" data-y="193"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(318,829)" data-x="318" data-y="829"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(940,75)" data-x="940" data-y="75"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(511,633)" data-x="511" data-y="633"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(583,649)" data-x="583" data-y="649"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(1010,635)" data-x="1010" data-y="635"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(692,774)" data-x="692" data-y="774"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(787,120)" data-x="787" data-y="120"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(378,90)" data-x="378" data-y="90"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(335,261)" data-x="335" data-y="261"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(481,318)" data-x="481" data-y="318"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(1003,760)" data-x="1003" data-y="760"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(520,195)" data-x="520" data-y="195"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(353,698)" data-x="353" data-y="698"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(675,75)" data-x="675" data-y="75"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(302,795)" data-x="302" data-y="795"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(445,441)" data-x="445" data-y="441"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(607,321)" data-x="607" data-y="321"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(700,525)" data-x="700" data-y="525"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(439,661)" data-x="439" data-y="661"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(321,189)" data-x="321" data-y="189"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(691,732)" data-x="691" data-y="732"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(788,522)" data-x="788" data-y="522"></circle>
+      </g>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
