--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
       </mask>
       <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
       <g id="js-meets-circles">
-        <circle fill="white" stroke="none" r="75" transform="translate(764,295)" data-x="764" data-y="295"></circle>
-        <circle fill="white" stroke="none" r="84" transform="translate(599,275)" data-x="599" data-y="275"></circle>
-        <circle fill="white" stroke="none" r="52" transform="translate(626,274)" data-x="626" data-y="274"></circle>
-        <circle fill="white" stroke="none" r="76" transform="translate(552,203)" data-x="552" data-y="203"></circle>
-        <circle fill="white" stroke="none" r="60" transform="translate(682,257)" data-x="682" data-y="257"></circle>
-        <circle fill="white" stroke="none" r="94" transform="translate(659,236)" data-x="659" data-y="236"></circle>
-        <circle fill="white" stroke="none" r="70" transform="translate(547,205)" data-x="547" data-y="205"></circle>
-        <circle fill="white" stroke="none" r="68" transform="translate(687,237)" data-x="687" data-y="237"></circle>
-        <circle fill="white" stroke="none" r="57" transform="translate(635,230)" data-x="635" data-y="230"></circle>
-        <circle fill="white" stroke="none" r="77" transform="translate(510,238)" data-x="510" data-y="238"></circle>
-        <circle fill="white" stroke="none" r="58" transform="translate(507,265)" data-x="507" data-y="265"></circle>
-        <circle fill="white" stroke="none" r="97" transform="translate(508,230)" data-x="508" data-y="230"></circle>
-        <circle fill="white" stroke="none" r="78" transform="translate(759,298)" data-x="759" data-y="298"></circle>
+        <circle fill="white" stroke="none" r="72" transform="translate(651,222)" data-x="651" data-y="222"></circle>
+        <circle fill="white" stroke="none" r="73" transform="translate(573,258)" data-x="573" data-y="258"></circle>
+        <circle fill="white" stroke="none" r="54" transform="translate(699,271)" data-x="699" data-y="271"></circle>
+        <circle fill="white" stroke="none" r="90" transform="translate(767,272)" data-x="767" data-y="272"></circle>
+        <circle fill="white" stroke="none" r="62" transform="translate(634,226)" data-x="634" data-y="226"></circle>
+        <circle fill="white" stroke="none" r="89" transform="translate(570,213)" data-x="570" data-y="213"></circle>
+        <circle fill="white" stroke="none" r="70" transform="translate(592,260)" data-x="592" data-y="260"></circle>
+        <circle fill="white" stroke="none" r="58" transform="translate(548,294)" data-x="548" data-y="294"></circle>
+        <circle fill="white" stroke="none" r="96" transform="translate(545,279)" data-x="545" data-y="279"></circle>
+        <circle fill="white" stroke="none" r="71" transform="translate(554,212)" data-x="554" data-y="212"></circle>
+        <circle fill="white" stroke="none" r="92" transform="translate(513,272)" data-x="513" data-y="272"></circle>
+        <circle fill="white" stroke="none" r="97" transform="translate(593,292)" data-x="593" data-y="292"></circle>
+        <circle fill="white" stroke="none" r="55" transform="translate(532,243)" data-x="532" data-y="243"></circle>
       </g>
       <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -560,36 +560,36 @@
   <path id="js-wave1-top" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
 </g>
       <g id="js-svg-circles" class="h-g">
-        <circle fill="white" stroke="" r="0" transform="translate(252,582)" data-x="252" data-y="582"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(851,791)" data-x="851" data-y="791"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(824,751)" data-x="824" data-y="751"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(524,372)" data-x="524" data-y="372"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(512,538)" data-x="512" data-y="538"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(293,224)" data-x="293" data-y="224"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(242,367)" data-x="242" data-y="367"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(435,273)" data-x="435" data-y="273"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(967,156)" data-x="967" data-y="156"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(688,446)" data-x="688" data-y="446"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(399,484)" data-x="399" data-y="484"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(869,671)" data-x="869" data-y="671"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(785,625)" data-x="785" data-y="625"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(902,336)" data-x="902" data-y="336"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(510,128)" data-x="510" data-y="128"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(704,430)" data-x="704" data-y="430"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(859,115)" data-x="859" data-y="115"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(275,750)" data-x="275" data-y="750"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(244,748)" data-x="244" data-y="748"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(336,773)" data-x="336" data-y="773"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(539,343)" data-x="539" data-y="343"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(931,167)" data-x="931" data-y="167"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(1000,748)" data-x="1000" data-y="748"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(500,584)" data-x="500" data-y="584"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(849,759)" data-x="849" data-y="759"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(613,648)" data-x="613" data-y="648"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(421,481)" data-x="421" data-y="481"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(370,766)" data-x="370" data-y="766"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(266,756)" data-x="266" data-y="756"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(428,530)" data-x="428" data-y="530"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(413,664)" data-x="413" data-y="664"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(980,328)" data-x="980" data-y="328"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(342,533)" data-x="342" data-y="533"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(781,227)" data-x="781" data-y="227"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(399,161)" data-x="399" data-y="161"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(331,696)" data-x="331" data-y="696"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(269,481)" data-x="269" data-y="481"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(394,691)" data-x="394" data-y="691"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(397,464)" data-x="397" data-y="464"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(488,311)" data-x="488" data-y="311"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(1010,67)" data-x="1010" data-y="67"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(847,784)" data-x="847" data-y="784"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(622,356)" data-x="622" data-y="356"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(257,308)" data-x="257" data-y="308"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(975,672)" data-x="975" data-y="672"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(615,568)" data-x="615" data-y="568"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(362,523)" data-x="362" data-y="523"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(741,207)" data-x="741" data-y="207"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(697,76)" data-x="697" data-y="76"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(925,164)" data-x="925" data-y="164"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(332,730)" data-x="332" data-y="730"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(271,577)" data-x="271" data-y="577"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(829,225)" data-x="829" data-y="225"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(525,116)" data-x="525" data-y="116"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(873,765)" data-x="873" data-y="765"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(694,205)" data-x="694" data-y="205"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(780,750)" data-x="780" data-y="750"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(874,774)" data-x="874" data-y="774"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(913,552)" data-x="913" data-y="552"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(652,420)" data-x="652" data-y="420"></circle>
       </g>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(240)">
         <path id="js-svg-g" d="M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572" stroke="#868A86" stroke-width="6"></path>
@@ -602,7 +602,7 @@
           <rect fill="url(#linearGradient-1)" transform="translate(196.500000, 393.000000) rotate(-105.000000) translate(-196.500000, -393.000000) " x="137" y="327" width="119" height="132"></rect>
           <rect fill="#FFFFFF" transform="translate(176.562999, 181.701679) rotate(-15.000000) translate(-176.562999, -181.701679) " x="33.6214332" y="31.4221551" width="285.883132" height="300.559048"></rect>
         </g>
-        <path id="js-svg-t" d="M321,359 L398,476 L474,359 L321,359 Z" stroke="#979797" stroke-width="6"></path>
+        <path id="js-svg-t" stroke-linecap="round" d="M321,359 L398,476 L474,359 L321,359 Z" stroke="#979797" stroke-width="6"></path>
       </g>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
