--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
       </mask>
       <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
       <g id="js-meets-circles">
-        <circle fill="white" stroke="none" r="72" transform="translate(651,222)" data-x="651" data-y="222"></circle>
-        <circle fill="white" stroke="none" r="73" transform="translate(573,258)" data-x="573" data-y="258"></circle>
-        <circle fill="white" stroke="none" r="54" transform="translate(699,271)" data-x="699" data-y="271"></circle>
-        <circle fill="white" stroke="none" r="90" transform="translate(767,272)" data-x="767" data-y="272"></circle>
-        <circle fill="white" stroke="none" r="62" transform="translate(634,226)" data-x="634" data-y="226"></circle>
-        <circle fill="white" stroke="none" r="89" transform="translate(570,213)" data-x="570" data-y="213"></circle>
-        <circle fill="white" stroke="none" r="70" transform="translate(592,260)" data-x="592" data-y="260"></circle>
-        <circle fill="white" stroke="none" r="58" transform="translate(548,294)" data-x="548" data-y="294"></circle>
-        <circle fill="white" stroke="none" r="96" transform="translate(545,279)" data-x="545" data-y="279"></circle>
-        <circle fill="white" stroke="none" r="71" transform="translate(554,212)" data-x="554" data-y="212"></circle>
-        <circle fill="white" stroke="none" r="92" transform="translate(513,272)" data-x="513" data-y="272"></circle>
-        <circle fill="white" stroke="none" r="97" transform="translate(593,292)" data-x="593" data-y="292"></circle>
-        <circle fill="white" stroke="none" r="55" transform="translate(532,243)" data-x="532" data-y="243"></circle>
+        <circle fill="white" stroke="none" r="84" transform="translate(524,283)" data-x="524" data-y="283"></circle>
+        <circle fill="white" stroke="none" r="53" transform="translate(730,266)" data-x="730" data-y="266"></circle>
+        <circle fill="white" stroke="none" r="54" transform="translate(643,222)" data-x="643" data-y="222"></circle>
+        <circle fill="white" stroke="none" r="80" transform="translate(691,201)" data-x="691" data-y="201"></circle>
+        <circle fill="white" stroke="none" r="65" transform="translate(505,262)" data-x="505" data-y="262"></circle>
+        <circle fill="white" stroke="none" r="86" transform="translate(615,274)" data-x="615" data-y="274"></circle>
+        <circle fill="white" stroke="none" r="59" transform="translate(759,224)" data-x="759" data-y="224"></circle>
+        <circle fill="white" stroke="none" r="51" transform="translate(611,286)" data-x="611" data-y="286"></circle>
+        <circle fill="white" stroke="none" r="68" transform="translate(573,226)" data-x="573" data-y="226"></circle>
+        <circle fill="white" stroke="none" r="87" transform="translate(583,201)" data-x="583" data-y="201"></circle>
+        <circle fill="white" stroke="none" r="75" transform="translate(590,227)" data-x="590" data-y="227"></circle>
+        <circle fill="white" stroke="none" r="78" transform="translate(619,257)" data-x="619" data-y="257"></circle>
+        <circle fill="white" stroke="none" r="66" transform="translate(689,207)" data-x="689" data-y="207"></circle>
       </g>
       <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -560,36 +560,36 @@
   <path id="js-wave1-top" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
 </g>
       <g id="js-svg-circles" class="h-g">
-        <circle fill="white" stroke="" r="0" transform="translate(413,664)" data-x="413" data-y="664"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(980,328)" data-x="980" data-y="328"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(342,533)" data-x="342" data-y="533"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(781,227)" data-x="781" data-y="227"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(399,161)" data-x="399" data-y="161"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(331,696)" data-x="331" data-y="696"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(269,481)" data-x="269" data-y="481"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(394,691)" data-x="394" data-y="691"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(397,464)" data-x="397" data-y="464"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(488,311)" data-x="488" data-y="311"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(1010,67)" data-x="1010" data-y="67"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(847,784)" data-x="847" data-y="784"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(622,356)" data-x="622" data-y="356"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(257,308)" data-x="257" data-y="308"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(975,672)" data-x="975" data-y="672"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(615,568)" data-x="615" data-y="568"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(362,523)" data-x="362" data-y="523"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(741,207)" data-x="741" data-y="207"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(697,76)" data-x="697" data-y="76"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(925,164)" data-x="925" data-y="164"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(332,730)" data-x="332" data-y="730"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(271,577)" data-x="271" data-y="577"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(829,225)" data-x="829" data-y="225"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(525,116)" data-x="525" data-y="116"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(873,765)" data-x="873" data-y="765"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(694,205)" data-x="694" data-y="205"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(780,750)" data-x="780" data-y="750"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(874,774)" data-x="874" data-y="774"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(913,552)" data-x="913" data-y="552"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(652,420)" data-x="652" data-y="420"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(824,822)" data-x="824" data-y="822"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(1032,768)" data-x="1032" data-y="768"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(369,432)" data-x="369" data-y="432"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(880,376)" data-x="880" data-y="376"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(644,388)" data-x="644" data-y="388"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(876,783)" data-x="876" data-y="783"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(823,508)" data-x="823" data-y="508"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(336,745)" data-x="336" data-y="745"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(771,402)" data-x="771" data-y="402"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(521,250)" data-x="521" data-y="250"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(256,438)" data-x="256" data-y="438"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(605,498)" data-x="605" data-y="498"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(292,537)" data-x="292" data-y="537"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(386,700)" data-x="386" data-y="700"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(863,391)" data-x="863" data-y="391"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(306,437)" data-x="306" data-y="437"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(915,447)" data-x="915" data-y="447"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(655,752)" data-x="655" data-y="752"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(407,775)" data-x="407" data-y="775"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(637,58)" data-x="637" data-y="58"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(692,394)" data-x="692" data-y="394"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(772,251)" data-x="772" data-y="251"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(648,552)" data-x="648" data-y="552"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(1019,647)" data-x="1019" data-y="647"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(283,434)" data-x="283" data-y="434"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(837,747)" data-x="837" data-y="747"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(913,667)" data-x="913" data-y="667"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(854,519)" data-x="854" data-y="519"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(418,79)" data-x="418" data-y="79"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(610,543)" data-x="610" data-y="543"></circle>
       </g>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(240)">
         <path id="js-svg-g" d="M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572" stroke="#868A86" stroke-width="6"></path>
@@ -602,7 +602,7 @@
           <rect fill="url(#linearGradient-1)" transform="translate(196.500000, 393.000000) rotate(-105.000000) translate(-196.500000, -393.000000) " x="137" y="327" width="119" height="132"></rect>
           <rect fill="#FFFFFF" transform="translate(176.562999, 181.701679) rotate(-15.000000) translate(-176.562999, -181.701679) " x="33.6214332" y="31.4221551" width="285.883132" height="300.559048"></rect>
         </g>
-        <path id="js-svg-t" stroke-linecap="round" d="M321,359 L398,476 L474,359 L321,359 Z" stroke="#979797" stroke-width="6"></path>
+        <path id="js-svg-t" d="M321,359 L398,476 L474,359 L321,359 Z" stroke="#979797" stroke-width="6"></path>
       </g>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
